assets/styles.css
/* FONTS */
@font-face {
	font-family: PTSerif;
	src: url(PT_Serif/PTSerif-Regular.ttf);
}
@font-face {
	font-family: PTSerif;
	src: url(PT_Serif/PTSerif-Bold.ttf);
	font-weight: bold;
}
@font-face {
	font-family: PTSans;
	src: url(PT_Sans/PTSans-Regular.ttf);
}

/* HIDE THINGS */
#la-group {
	display: none;
}

/* General */
html {
	scroll-behavior: smooth;
}
body {
	margin: 0px 15%;
	font-family: PTSans, Arial, Helvetica, sans-serif;
	background-color: #FFFFFE;
	color: #333533;
}
h1 {
	font-family: PTSerif, serif;
	font-size: 40px;
}
p {
	text-align: justify;
}

/* HEADER */
#header {
	height: 3em;
	text-align: center;
	box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
	position: fixed;
	width: 100%;
	top: 0;
	left: 0;
	line-height: 3em;
	z-index: 10001;
	background-color: #FFFFFE;
}

.logo-container {
	width: 130px;
	margin: auto;
	margin-top: 2px;
}
.logo {
	width: 100%;
	margin-top: 6px;
}

/* INTRO */
#intro {
	margin: 80px 0px;
	padding: 0px 10%;
}

/* FANCY BUTTON */
.buttons-coll {
  width: 90%;
  margin: auto;
  margin-top: 80px;

  text-align: center;
}
button {
  margin: 20px;
}
.custom-btn {
  font-family: "PTSans-Regular", sans-serif;
  font-size: 16px;
  font-weight: 500;
  width: 190px;
  background: transparent;
  outline: none !important;
  cursor: pointer;
  transition: all 0.3s ease;
  position: relative;
  display: inline-block;
  height: 60px;
}

.btn-1 {
  border: 2px solid #000;
}

.btn-1:hover {
  background: #EFE6DC;
  color: #fff;
  border-color: #EFE6DC;
}


/* Cover photo */
.cover-section {
	padding-top: 5em;
	display: flex;
	justify-content: space-between;
	align-items: center;
}
.cover-photo-container {
	width: 60%;
	max-width: 700px;
	/*padding: 50px;*/
}
.cover-photo {
	width: 100%;
	filter: drop-shadow(20px 20px 0px #EFE6DC);
}
.cover-title {
	font-family: PTSerif;
	font-weight: bold;
	font-size: 2em;
	font-style: italic;
	text-shadow: 0px 4px 0px #E6D9CB;
	/*padding-left: 20px;*/
}
.indent {
	padding-left: 16px;
}

/* Photos */
.triple-photo {
	width: 30%;
	margin-bottom: 30px;
}
.landscape-row {
	display: flex;
	justify-content: space-between;
	flex-wrap: wrap;
}
.triple-portrait {
	display: flex;
	justify-content: space-between;
	flex-wrap: wrap;
	padding: 0px 15px;
	align-items: flex-start;
}
.landscape-photo {
	width: 45%;
	margin-bottom: 30px;
	min-width: 300px;
}
.photographer-text {
	/*margin: 10px 10%;*/
	margin: 0px 15px;
	margin-bottom: 50px;
}
/*.photo-group {
	margin-bottom: px;
}*/
.photographer-name {
	background: linear-gradient(180deg, rgba(255,255,255,0) 65%, #EFE6DC 65%);
	display: table;
}
.column {
	width: 50%;
	padding: 0px 15px;
	box-sizing: border-box;
}
.col-photo {
	width: 100%;
	/*padding-bottom: 30px;*/
}
.photo-grid {
	display: flex;
	justify-content: space-between;
	align-items: flex-start;
	flex-wrap: wrap;
}
.photo-grid .col-photo {
	padding: 15px 0px;
}
hr {
	width: 20%;
	border-color: rgba(239, 230, 220, 0.5);
	/*border-style: dashed;*/
	margin: 100px auto;
}
#scroll-target {
	visibility: hidden;
	margin: 40px auto;
}
	

/* FOOTER */
#footer {
	font-family: PTSerif, serif;
	text-align: center;
	margin: 80px 0px;
}
#footer-hr {
	width: 100%;
}


/* WIDTHS */
.col-photo {
	width: 100%;
	/*padding-bottom: 30px;*/
}
.triple-landscape {
	display: flex;
	justify-content: space-between;
	flex-wrap: wrap;
	padding: 15px 0px;
}
.col-single {
	width: 67%;
	padding: 0px 15px;
	box-sizing: border-box;
	display: flex;
}
.col-stack {
	width: 33%;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: flex-start;
	padding: 0px 15px;
	box-sizing: border-box;
}

/* COL WIDTHS */
.width-67 {
	width: 67%;
}
.width-66 {
	width: 66%;
}
.width-65 {
	width: 65%;
}
.width-63 {
	width: 63%;
}
.width-515 {
	width: 51.5%;
}
.width-51 {
	width: 51%;
}
.width-50 {
	width: 50%;
}
.width-49 {
	width: 49%;
}
.width-485 {
	width: 48.5%;
}
.width-37 {
	width: 37%;
}
.width-35 {
	width: 35%;
}
.width-34 {
	width: 34%;
}
.width-33 {
	width: 33%;
}

.back-to-top-container {
	text-align: center;
	margin-top: 50px;
}
.back-to-top-container a, #usc a{
	font-family: PTSerif, serif;
	color: #CCA795;
}

#usc, #usc a {
	color: #CCA795;
}

/* MEDIA QUERIES */
@media screen and (max-width: 600px) {
  .triple-landscape, .triple-portrait, .photo-grid {
  	flex-direction: column;
  	padding: 0px 15px;
  }
  .col-single, .col-stack, .triple-photo, .column {
  	width: 100%;
  	padding: 0px 0px;
  }
  .col-photo {
  	margin: 15px 0px;
  }
  .cover-section {
  	flex-direction: column;
  }
  .cover-title {
  	margin-top: 60px;
  }
  .cover-photo-container {
  	width: 100%;
  }
}
@media screen and (max-width: 768px) {
  .cover-title {
  	font-size: 1.5em;
  }
}
@media screen and (min-width: 1230px) {
  .cover-section {
  	justify-content: space-evenly;
  }
}

